Fix gallery data to match updated mascot map keys

--- a/hubspot-page-template.html
+++ b/hubspot-page-template.html
@@ -698,19 +698,19 @@
 
         // Gallery data with statistics
         const galleryData = [
-            { center: 'LA County', mascot: 'The Hollywood Star', referrals: '7,145', enrolled: '1,830', gifts: '1,113' },
+            { center: 'Los Angeles', mascot: 'The Hollywood Star', referrals: '7,145', enrolled: '1,830', gifts: '1,113' },
             { center: 'Bay Area', mascot: 'The Bay Bridge Connector', referrals: '9,903', enrolled: '3,215', gifts: '2,159' },
             { center: 'San Diego', mascot: 'The Balboa Park Pal', referrals: '9,567', enrolled: '1,851', gifts: '1,263' },
-            { center: 'Inland Empire', mascot: 'The IE Route Rocker', referrals: '7,519', enrolled: '2,732', gifts: '1,759' },
+            { center: 'Inland Empire (Riverside/San Bernardino)', mascot: 'The IE Route Rocker', referrals: '7,519', enrolled: '2,732', gifts: '1,759' },
             { center: 'Orange County', mascot: 'The OC Operator', referrals: '5,640', enrolled: '1,852', gifts: '1,191' },
-            { center: 'Ventura County', mascot: 'The Pier-to-Peer Pal', referrals: '4,846', enrolled: '1,615', gifts: '1,085' },
-            { center: 'Alameda County', mascot: 'The Oakland Oak', referrals: '7,145', enrolled: '1,830', gifts: '1,113' },
+            { center: 'Ventura - Interface', mascot: 'The Pier-to-Peer Pal', referrals: '4,846', enrolled: '1,615', gifts: '1,085' },
+            { center: 'Alameda (Eden I&R)', mascot: 'The Oakland Oak', referrals: '7,145', enrolled: '1,830', gifts: '1,113' },
             { center: 'San Joaquin', mascot: 'The Delta King', referrals: '4,664', enrolled: '1,561', gifts: '960' },
             { center: 'Sacramento', mascot: 'The Capital Connector', referrals: '4,159', enrolled: '1,841', gifts: '1,289' },
-            { center: 'Nevada/Placer', mascot: 'The Tahoe Gold Miner', referrals: '2,319', enrolled: '849', gifts: '538' },
+            { center: 'Connecting Point (Nevada/Placer/Tahoe)', mascot: 'The Tahoe Gold Miner', referrals: '2,319', enrolled: '849', gifts: '538' },
             { center: 'Fresno/Madera', mascot: 'The Central Valley Vine', referrals: '1,775', enrolled: '560', gifts: '362' },
             { center: 'Contra Costa', mascot: 'The Diablo Peak Performer', referrals: '1,312', enrolled: '477', gifts: '306' },
-            { center: 'Butte/Glenn', mascot: 'The Chico Bridge Builder', referrals: '1,351', enrolled: '474', gifts: '301' }
+            { center: 'Help Central (Butte/Glenn)', mascot: 'The Chico Bridge Builder', referrals: '1,351', enrolled: '474', gifts: '301' }
         ];
 
         /**
