Add hint text for interactive gallery cards

--- a/hubspot-page-template.html
+++ b/hubspot-page-template.html
@@ -536,6 +536,7 @@
                     🎬 Celebrating The 211 All-Stars 🎬
                 </h3>
                 <p class="text-slate-200 text-base md:text-xl max-w-3xl mx-auto mb-3">13 Call Centers + Hundreds of Dedicated 211 Staff = Healthier Communities</p>
+                <p class="text-gold-light text-sm md:text-base max-w-2xl mx-auto italic opacity-80">Click any card to flip and see referral stats</p>
             </div>
             
             <div class="gallery-container" id="gallery-container">
