Improve thank you message spacing and layout

--- a/hubspot-page-template.html
+++ b/hubspot-page-template.html
@@ -621,14 +621,14 @@
             </div>
 
             <!-- Thank You Message (hidden by default) -->
-            <div id="thank-you-message" class="relative z-10 text-center" style="display: none;">
-                <h2 class="text-4xl md:text-5xl font-serif text-gold mb-6 font-bold" style="text-shadow: 0 2px 20px rgba(212, 175, 55, 0.6);">✦ Thank You! ✦</h2>
+            <div id="thank-you-message" class="relative z-10 text-center px-4" style="display: none;">
+                <h2 class="text-4xl md:text-5xl font-serif text-gold mb-8 font-bold" style="text-shadow: 0 2px 20px rgba(212, 175, 55, 0.6);">✦ Thank You! ✦</h2>
                 <div id="mascot-container" class="mb-6 flex flex-col items-center">
-                    <img id="mascot-image" src="" alt="Mascot" style="max-width: 200px; max-height: 200px; margin-bottom: 12px;">
+                    <img id="mascot-image" src="" alt="Mascot" style="max-width: 220px; max-height: 220px; margin-bottom: 0;">
                 </div>
-                <p id="mascot-name" class="text-xl md:text-2xl font-serif text-gold mb-4 font-bold" style="text-shadow: 0 2px 10px rgba(212, 175, 55, 0.3);"></p>
-                <p id="thank-you-text" class="text-slate-100 text-xl md:text-2xl mb-3 font-semibold" style="text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);"></p>
-                <p id="thank-you-subtext" class="text-gold-light text-lg md:text-xl" style="text-shadow: 0 2px 10px rgba(212, 175, 55, 0.3);"></p>
+                <p id="mascot-name" class="text-xl md:text-2xl font-serif text-gold mb-6 font-bold" style="text-shadow: 0 2px 10px rgba(212, 175, 55, 0.3);"></p>
+                <p id="thank-you-text" class="text-slate-100 text-xl md:text-2xl mb-4 font-semibold" style="text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);"></p>
+                <p id="thank-you-subtext" class="text-gold-light text-base md:text-lg leading-relaxed max-w-xl mx-auto" style="text-shadow: 0 2px 10px rgba(212, 175, 55, 0.3);"></p>
             </div>
         </div>
 
