--- a/hubspot-page-template.html
+++ b/hubspot-page-template.html
@@ -652,7 +652,7 @@
 
     </main>
 
-    <footer class="text-center py-12 text-slate-400 text-base bg-gradient-to-r from-navy via-navy-deep to-navy border-t-2 border-gold relative overflow-hidden" style="box-shadow: 0 -10px 40px rgba(212, 175, 55, 0.2);" data-aos="fade-up">
+    <footer class="text-center py-12 text-slate-400 text-base bg-gradient-to-r from-navy via-navy-deep to-navy border-t-2 border-gold relative overflow-hidden" style="box-shadow: 0 -10px 40px rgba(212, 175, 55, 0.2);">
         <div class="absolute inset-0 bg-gradient-to-t from-gold/5 to-transparent"></div>
         <div class="relative z-10">
             <p class="mb-3" style="text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);">© 2025 Kick It California. All rights reserved.</p>
