Update label for gift cards in template

--- a/hubspot-page-template.html
+++ b/hubspot-page-template.html
@@ -768,7 +768,7 @@
                                     </div>
                                     <div class="stat-item">
                                         <div class="stat-number">${item.gifts}</div>
-                                        <div class="stat-label">Gift Cards Sent</div>
+                                        <div class="stat-label">Coached and Gift Cards Sent</div>
                                     </div>
                                 </div>
                             </div>
