--- a/hubspot-page-template.html
+++ b/hubspot-page-template.html
@@ -580,6 +580,7 @@
                     <!-- 211 Call Center (Second) -->
                     <div>
                         <label for="call-center" class="block text-slate-200 text-base font-semibold mb-2">Select Your 211 Call Center <span class="text-red-400">*</span></label>
+                        <p class="text-slate-300 text-sm mb-3">If you're part of the CTPP team, please select "Other - CTPP" from the dropdown menu.</p>
                         <select id="call-center" name="select_your_211_call_center" class="w-full px-4 py-3 rounded-lg bg-white text-navy-deep border-2 border-gold focus:outline-none focus:border-gold-light transition-colors" required>
                             <option value="">Please Select</option>
                             <option value="Help Central (Butte/Glenn)">Help Central (Butte/Glenn)</option>
